--- a/root.yaml
+++ b/root.yaml
@@ -13,13 +13,13 @@ servers:
 paths:  
   # Dog
   /api/dogs:
-    $ref: paths/dogs.yaml
+    $ref: ./paths/dogs.yaml
   /api/dogs/name:
-    $ref: paths/dogs_name.yaml
+    $ref: ./paths/dogs_name.yaml
   /api/dogs/run:
-    $ref: paths/dogs_run.yaml
+    $ref: ./paths/dogs_run.yaml
   # Cat
   /api/cats:
-    $ref: paths/cats.yaml
+    $ref: ./paths/cats.yaml
   /api/cats/:id:
-    $ref: paths/cats_id.yaml
+    $ref: ./paths/cats_id.yaml
